== 0.15.2

* Refactoring
  * Gem dependencies updated:
    * Rails 3.2.0
    * Contour ~> 0.9.3
  * Devise migration and configuration file updated

== 0.15.1

* Bug Fix
  * Fixed default colors specified in RGB format from loading properly in the color picker

== 0.15.0

* Enhancements
  * Groups of stickies can now have their due dates shifted by editing a single sticky in the group and selecting either 'incomplete' to shift all other not completed stickies, or 'all' to shift all the stickies in the group
  * Calendar improvements
    * Stickies are now displayed under their tags
    * Stickies can now be displayed or hidden per project
    * Project colors can now be personalized
  * Sticky list page has the following improvements:
    * Stickies can now be filtered and downloaded in a CSV file
    * Cleaner layout of search filters
  * Items on template index are now aligned across various templates
  * Emails for group creation and sticky completion now display:
    * Group Template name
    * Stickies now have first 16 characters of description

* Bug Fix
  * Minor table GUI fix when expanding a sticky
  * Templates page is now sortable by name
  * Searching and filtering is now possible in the groups list view
  * Tags can now be cleared when updating a sticky

* Refactoring
  * Removed unused sticky attributes sticky type, sticky position, and sticky parent
  * Link to template removed from the groups list page to avoid confusion

* Testing
  * Added tests for sending email for sticky_creation and sticky_completion
  * Added tests for sending email for project_comments and sticky_comments

== 0.14.1

* Bug Fix
  * Use update_column instead of update_attribute to avoid emails being sent out during a migration

== 0.14.0

* Enhancements
  * Stickies no longer have status of 'planned', 'ongoing', 'completed', and now are either completed or not completed