@@ -1,4 +1,4 @@
-DEFAULT_APP_NAME = "<%= print "Enter Default App Name [Notes]: "; s = gets.chomp().gsub('"', '\"').gsub("\\", "\\\\"); s == '' ? 'Notes' : s %>"
+DEFAULT_APP_NAME = "<%= print "Enter Default App Name [Task Tracker]: "; s = gets.chomp().gsub('"', '\"').gsub("\\", "\\\\"); s == '' ? 'Task Tracker' : s %>"
 SITE_URL = "<%= print "Enter Site URL [http://localhost]: "; s = gets.chomp().gsub('"', '\"').gsub("\\", "\\\\"); s == '' ? 'http://localhost' : s %>"
 
 # Used so Devise knows what url to append.
