@@ -1,6 +1,13 @@
+require 'omniauth-openid'
+require 'omniauth-ldap'
+require 'omniauth-twitter'
+require 'omniauth-facebook'
+require 'omniauth-linkedin'
+require 'omniauth-cas'
+
 require 'openid/store/filesystem'
 Rails.application.config.middleware.use OmniAuth::Builder do
-  provider :open_id, OpenID::Store::Filesystem.new('/tmp'), :name => 'google_apps', :identifier => 'https://www.google.com/accounts/o8/id'
+  provider :open_id, store: OpenID::Store::Filesystem.new('/tmp'), name: 'google_apps', identifier: 'https://www.google.com/accounts/o8/id'
   provider :twitter, 'CONSUMER_KEY', 'CONSUMER_SECRET'
   provider :facebook, 'APP_ID', 'APP_SECRET'
   provider :linked_in, 'CONSUMER_KEY', 'CONSUMER_SECRET'
